--- a/emailTemplate.html
+++ b/emailTemplate.html
@@ -17,7 +17,7 @@
                   <p>
                     <span style="color: #b6b2ff;">Thank you for signing up with us! We're excited to have you as a part of our community.&nbsp; 
                       <br>
-                      <br>By verifying your email, you'll gain full access to all the features and benefits of Cypress . If you did not create an account with us, please disregard this email. 
+                      <br>By verifying your email, you'll gain full access to all the features and benefits of Multi-Lab . If you did not create an account with us, please disregard this email. 
                       <br>
                     </span>
                   </p>
@@ -34,7 +34,7 @@
                   </table>
                   <p style="font-family: 'Avenir Next', 'Helvetica Neue', Helvetica, Helvetica, Arial, sans-serif; margin: 0px 0px 20px; padding: 0px; font-size: 16px; line-height: 1.65; font-weight: normal;">
                     <span style="color: #b6b2ff;">
-                      <em style="margin: 0; padding: 0; font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65;">– Team Cypress</em>
+                      <em style="margin: 0; padding: 0; font-size: 100%; font-family: 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; line-height: 1.65;">– Team Multi-Lab</em>
                     </span>
                   </p>
                 </td>
